data/all_generated_tests/raw_wast_tests/call_TypeMismatchinControlFlowInstructions_3736.wast
;; 5. **Unmatched Function Result Type in Block**:    - **Description**: Call a function within a block and misinterpret the result types, such as expecting an integer but the function returns a float.    - **Reasoning**: Validates the correct type handling for function results within block structures.    - **Constraint**: This test should fail if block instructions do not validate function return types correctly.    - **Relation**: Assures result type consistency within blocks.

(assert_invalid
  (module
    (type (func (result f32)))
    (func $unmatched-result-type (result i32)
      (block (result i32)
        (call 0)
      )
    )
    (func (result f32) (f32.const 0))
  )
  "type mismatch"
)